# cpyrcolate

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
src/cpyrcolate/: __init__.py  core.py  percolate_core.c  percolate_core.h  percolate_cy.c  percolate_cy.pyx
tests/: Makefile  percolate_random_graph.py  test_core.c  test_percolation.py
